--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -30,9 +30,9 @@
 \graphicspath{ {./images/} }
 
 \lstdefinelanguage{JavaScript}{
-  keywords={typeof, new, true, false, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, let, log, const},
+  keywords={typeof, new, catch, function, return, null, catch, switch, var, if, in, while, do, else, case, break, let, log, const, console},
   keywordstyle=\color{blue}\bfseries,
-  ndkeywords={class, export, boolean, throw, implements, import, this, console},
+  ndkeywords={class, export, boolean, throw, implements, import, this, true, false},
   ndkeywordstyle=\color{darkgray}\bfseries,
   identifierstyle=\color{black},
   sensitive=false,
@@ -440,7 +440,7 @@ I own a pet armadillo.
 In the ES6 version of JavaScript, we can insert, or \textit{interpolate}, variables into strings using \textit{template literals}. Check out the following example where a template literal is used to log strings together:
 \textasciigrave
 \begin{lstlisting}
-const myPet = 'armadillo';
+const myPet = "armadillo";
 console.log((*@\texttt{\textasciigrave}@*)I own a pet ${myPet}.(*@\texttt{\textasciigrave}@*)); // Output: I own a pet armadillo.
 \end{lstlisting}
 Notice that:
@@ -454,7 +454,7 @@ One of the biggest benefits to using template literals is the readability of the
 \subsection{typeof operator}
 While writing code, it can be useful to keep track of the data types of the variables in your program. If you need to check the data type of a variable’s value, you can use the \colorbox{lightgray}{typeof} operator. The \colorbox{lightgray}{typeof} operator checks the value to its right and \textit{returns}, or passes back, a string of the data type. 
 \begin{lstlisting}
-const unknown1 = 'foo';
+const unknown1 = "foo";
 console.log(typeof unknown1); // Output: string
 
 const unknown2 = 10;
@@ -479,10 +479,287 @@ Variables is a powerful concept you will use in all your future programming ende
 \item The \colorbox{lightgray}{typeof} keyword returns the data type (as a string) of a value.
 \end{itemize}
 
+\newpage
+\section{Conditional Statements}
+\subsection{What are Conditional Statements?}
+In life, we make decisions based on circumstances. Think of an everyday decision as mundane as falling asleep — if we are tired, we go to bed, otherwise, we wake up and start our day. 
+These if-else decisions can be modeled in code by creating \textit{conditional statements}. A conditional statement checks a specific condition(s) and performs a task based on the condition(s). \\
+\newline
+Now we will explore how programs make decisions by evaluating conditions and introduce logic into our code. We will cover the following concepts:
+\begin{itemize}[leftmargin = *]
+\item \colorbox{lightgray}{if}, \colorbox{lightgray}{else if}, and \colorbox{lightgray}{else} statements 
+\item comparison operators
+\item logical operators
+\item truthy vs falsy values
+\item ternary operators
+\item \colorbox{lightgray}{switch} statement
+\end{itemize}
 
+\subsection{If Statement}
+We often perform a task based on a condition. For example, if the weather is nice today, then we will go outside. If the alarm clock rings, then we will shut it off. If we are tired, then we will go to sleep. \\
+\newline
+In programming, we can also perform a task based on a condition using an \colorbox{lightgray}{if} statement:
+\begin{lstlisting}
+if (true) {
+  console.log("This message will print!"); 
+}
+// Prints: This message will print!
+\end{lstlisting}
+Notice in the example above, we have an \colorbox{lightgray}{if} statement. The \colorbox{lightgray}{if} statement is composed of:
+\begin{itemize}[leftmargin = *]
+\item The \colorbox{lightgray}{if} keyword followed by a set of parentheses \colorbox{lightgray}{()} which is followed by a \textit{code block}, or \textit{block statement}, indicated by a set of curly braces \colorbox{lightgray}{\{\}}.
+\item Inside the parentheses \colorbox{lightgray}{()}, a condition is provided that evaluates to \colorbox{lightgray}{true} or \colorbox{lightgray}{false}.
+\item If the condition evaluates to \colorbox{lightgray}{true}, the code inside the curly braces \colorbox{lightgray}{\{\}} runs, or \textit{executes}.
+\item If the condition evaluates to \colorbox{lightgray}{false}, the block will not execute.
+\end{itemize}
 
+\subsection{If...Else Statements}
+In the previous chapter, we used an \colorbox{lightgray}{if} statement that checked a condition to decide whether or not to run a block of code. In many cases, we’ll have code we want to run if our condition evaluates to \colorbox{lightgray}{false}. \\
+\newline
+If we wanted to add some default behavior to the \colorbox{lightgray}{if} statement, we can add an \colorbox{lightgray}{else} statement to run a block of code when the condition evaluates to \colorbox{lightgray}{false}. Take a look at the inclusion of an \colorbox{lightgray}{else} statement: 
+\begin{lstlisting}
+if (false) {
+  console.log("The code in this block will not run.");
+} else {
+  console.log("But the code in this block will!");
+}
 
+// Prints: But the code in this block will!
+\end{lstlisting}
+An \colorbox{lightgray}{else} statement must be paired with an \colorbox{lightgray}{if} statement, and together they are referred to as an \colorbox{lightgray}{if...else} statement. In the example above, the \colorbox{lightgray}{else} statement:
+\begin{itemize}[leftmargin = *]
+\item Uses the \colorbox{lightgray}{else} keyword following the code block of an \colorbox{lightgray}{if} statement.
+\item Has a code block that is wrapped by a set of curly braces \colorbox{lightgray}{\{\}}.
+\item The code inside the \colorbox{lightgray}{else} statement code block will execute when the \colorbox{lightgray}{if} statement’s condition evaluates to false.
+\end{itemize}
+\colorbox{lightgray}{if...else} statements allow us to automate solutions to yes-or-no questions, also known as binary decisions.
 
+\subsection{Comparison Operators}
+When writing conditional statements, sometimes we need to use different types of operators to compare values. These operators are called \textit{comparison operators}. Here is a list of some handy comparison operators and their syntax:
+\begin{itemize}[leftmargin = *]
+\item Less than: \colorbox{lightgray}{$<$}
+\item Greater than: \colorbox{lightgray}{$>$}
+\item Less than or equal to: \colorbox{lightgray}{$<$$=$}
+\item Greater than or equal to: \colorbox{lightgray}{$>$$=$}
+\item Is equal to: \colorbox{lightgray}{$=$$=$$=$}
+\item Is not equal to: \colorbox{lightgray}{$!$$=$$=$}
+\end{itemize}
+Comparison operators compare the value on the left with the value on the right. For instance:
+\begin{lstlisting}
+10 < 12 // Evaluates to true
+\end{lstlisting}
+It can be helpful to think of comparison statements as questions. When the answer is “yes”, the statement evaluates to \colorbox{lightgray}{true}, and when the answer is “no”, the statement evaluates to \colorbox{lightgray}{false}. The code above would be asking: is 10 less than 12? Yes! So \colorbox{lightgray}{10 < 12} evaluates to \colorbox{lightgray}{true}. \\
+\newline
+We can also use comparison operators on different data types like strings:
+\begin{lstlisting}
+"apples" === "oranges" // false
+\end{lstlisting}
+In the example above, we’re using the identity operator (\colorbox{lightgray}{$=$$=$$=$}) to check if the string \colorbox{lightgray}{`apples'} is the same as the string \colorbox{lightgray}{`oranges'}. Since the two strings are not the same, the comparison statement evaluates to \colorbox{lightgray}{false}. \\
+\newline
+All comparison statements evaluate to either true or false and are made up of: 
+\begin{itemize}[leftmargin = *]
+\item Two values that will be compared.
+\item An operator that separates the values and compares them accordingly (\colorbox{lightgray}{$>$}, \colorbox{lightgray}{$<$}, \colorbox{lightgray}{$<$$=$}, \colorbox{lightgray}{$>$$=$}, \colorbox{lightgray}{$=$$=$$=$} ,\colorbox{lightgray}{$!$$=$$=$}).
+\end{itemize}
+The difference between \colorbox{lightgray}{$=$$=$} and \colorbox{lightgray}{$=$$=$$=$} is that \colorbox{lightgray}{$=$$=$$=$}  is known as Identity / strict equality, meaning that the data types also must be equal. 
+\begin{lstlisting}
+console.log(1 == true) // output: true
+console.log(1 === true) // output: false
+\end{lstlisting}
+
+\subsection{Logical Operators}
+Working with conditionals means that we will be using booleans, \colorbox{lightgray}{true} or \colorbox{lightgray}{false} values. In JavaScript, there are operators that work with boolean values known as \textit{logical operators}. We can use logical operators to add more sophisticated logic to our conditionals. There are three logical operators: 
+\begin{itemize}[leftmargin = *]
+\item the and operator (\colorbox{lightgray}{$\&\&$})
+\item the or operator (\colorbox{lightgray}{||})
+\item the not operator, otherwise known as the bang operator (\colorbox{lightgray}{!}) 
+\end{itemize}
+When we use the \colorbox{lightgray}{$\&\&$} operator, we are checking that two things are true:
+\begin{lstlisting}
+if (stopLight === "green" && pedestrians === 0) {
+  console.log("Go!");
+} else {
+  console.log("Stop");
+}
+\end{lstlisting}
+When using the \colorbox{lightgray}{\&\&} operator, both conditions must evaluate to \colorbox{lightgray}{true} for the entire condition to evaluate to \colorbox{lightgray}{true} and execute. Otherwise, if either condition is \colorbox{lightgray}{false}, the \colorbox{lightgray}{\&\&} condition will evaluate to \colorbox{lightgray}{false} and the \colorbox{lightgray}{else} block will execute. \\
+\newline
+If we only care about either condition being true, we can use the \colorbox{lightgray}{||} operator:
+\begin{lstlisting}
+if (day === "Saturday" || day === "Sunday") {
+  console.log("Enjoy the weekend!");
+} else {
+  console.log("Do some work.");
+}
+\end{lstlisting}
+When using the \colorbox{lightgray}{||} operator, only one of the conditions must evaluate to \colorbox{lightgray}{true} for the overall statement to evaluate to \colorbox{lightgray}{true}. In the code example above, if either \colorbox{lightgray}{day $=$$=$$=$ `Saturday'} or \colorbox{lightgray}{day $=$$=$$=$ `Sunday'} evaluates to \colorbox{lightgray}{true} the \colorbox{lightgray}{if}‘s condition will evaluate to \colorbox{lightgray}{true} and its code block will execute. If the first condition in an \colorbox{lightgray}{||} statement evaluates to \colorbox{lightgray}{true}, the second condition will not even be checked. Only if \colorbox{lightgray}{day $=$$=$$=$ 'Saturday'} evaluates to \colorbox{lightgray}{false} will \colorbox{lightgray}{day $=$$=$$=$ 'Sunday'} be evaluated. The code in the \colorbox{lightgray}{else} statement above will execute only if both comparisons evaluate to \colorbox{lightgray}{false}. \\
+\newline
+The \colorbox{lightgray}{!} \textit{not operator reverses}, or \textit{negates}, the value of a boolean:
+\begin{lstlisting}
+let excited = true;
+console.log(!excited); // Prints false
+
+let sleepy = false;
+console.log(!sleepy); // Prints true
+\end{lstlisting}
+Essentially, the \colorbox{lightgray}{!} operator will either take a \colorbox{lightgray}{true} value and pass back \colorbox{lightgray}{false}, or it will take a \colorbox{lightgray}{false} value and pass back \colorbox{lightgray}{true}. \\
+\newline
+Logical operators are often used in conditional statements to add another layer of logic to our code.
+
+\subsection{Truthy and Falsy}
+Let us consider how non-boolean data types, like strings or numbers, are evaluated when checked inside a condition. \\
+\newline
+Sometimes, you will want to check if a variable exists and you will not necessarily want it to equal a specific value — you’ll only check to see if the variable has been assigned a value. Here is an example:
+\begin{lstlisting}
+let myVariable = "I Exist!";
+
+if (myVariable) {
+   console.log(myVariable)
+} else {
+   console.log("The variable does not exist.")
+}
+\end{lstlisting}
+The code block in the \colorbox{lightgray}{if} statement will run because \colorbox{lightgray}{myVariable} has a \textit{truthy} value; even though the value of \colorbox{lightgray}{myVariable} is not explicitly the value \colorbox{lightgray}{true}, when used in a boolean or conditional context, it evaluates to \colorbox{lightgray}{true} because it has been assigned a non-falsy value. \\
+\newline
+So which values are \textit{falsy}— or evaluate to \colorbox{lightgray}{false} when checked as a condition? The list of falsy values includes:
+\begin{itemize}[leftmargin = *]
+\item \colorbox{lightgray}{0}
+\item Empty strings like \colorbox{lightgray}{``''} or \colorbox{lightgray}{`'}
+\item \colorbox{lightgray}{null} which represent when there is no value at all
+\item \colorbox{lightgray}{undefined} which represent when a declared variable lacks a value
+\item \colorbox{lightgray}{NaN}, or Not a Number
+\end{itemize}
+Here’s an example with numbers: 
+\begin{lstlisting}
+let numberOfApples = 0;
+
+if (numberOfApples){
+   console.log("Let us eat apples!");
+} else {
+   console.log("No apples left!");
+}
+
+// Prints 'No apples left!'
+\end{lstlisting}
+The condition evaluates to \colorbox{lightgray}{false} because the value of the \colorbox{lightgray}{numberOfApples} is \colorbox{lightgray}{0}. Since \colorbox{lightgray}{0} is a falsy value, the code block in the \colorbox{lightgray}{else} statement will run.
+
+\subsection{Truthy and Falsy Assignment}
+Truthy and falsy evaluations open a world of short-hand possibilities. Say you have a website and want to take a user’s username to make a personalized greeting. Sometimes, the user does not have an account, making the \colorbox{lightgray}{username} variable falsy. The code below checks if \colorbox{lightgray}{username} is defined and assigns a default string if it is not:
+\begin{lstlisting}
+let defaultName;
+if (username) {
+  defaultName = username;
+} else {
+  defaultName = "Stranger";
+}
+\end{lstlisting}
+If you combine your knowledge of logical operators you can use a short-hand for the code above. In a boolean condition, JavaScript assigns the truthy value to a variable if you use the \colorbox{lightgray}{||} operator in your assignment:
+\begin{lstlisting}
+let defaultName = username || "Stranger";
+\end{lstlisting}
+Because \colorbox{lightgray}{||} or statements check the left-hand condition first, the variable \colorbox{lightgray}{defaultName} will be assigned the actual value of \colorbox{lightgray}{username} if is truthy, and it will be assigned the value of \colorbox{lightgray}{`Stranger'} if \colorbox{lightgray}{username} is falsy. This concept is also referred to as \textit{short-circuit evaluation}.
+
+\subsection{Ternary Operator}
+In the spirit of using short-hand syntax, we can use a \textit{ternary operator} to simplify an \colorbox{lightgray}{if...else} statement. Take a look at the \colorbox{lightgray}{if...else} statement example: 
+\begin{lstlisting}
+let isNightTime = true;
+
+if (isNightTime) {
+  console.log("Turn on the lights!");
+} else {
+  console.log("Turn off the lights!");
+}
+\end{lstlisting}
+We can use a \textit{ternary operator} to perform the same functionality:
+\begin{lstlisting}
+isNightTime ? console.log("Turn on the lights!") : console.log("Turn off the lights!");
+\end{lstlisting}
+In the example above:
+\begin{itemize}[leftmargin = *]
+\item The condition, \colorbox{lightgray}{isNightTime}, is provided before the \colorbox{lightgray}{?}.
+\item Two expressions follow the \colorbox{lightgray}{?} and are separated by a colon \colorbox{lightgray}{:}.
+\item If the condition evaluates to \colorbox{lightgray}{true}, the first expression executes.
+\item If the condition evaluates to \colorbox{lightgray}{false}, the second expression executes.
+\end{itemize}
+Like \colorbox{lightgray}{if...else} statements, ternary operators can be used for conditions which evaluate to \colorbox{lightgray}{true} or \colorbox{lightgray}{false}.
+
+\subsection{Else If Statements}
+We can add more conditions to our \colorbox{lightgray}{if...else} with an \colorbox{lightgray}{else if} statement. The \colorbox{lightgray}{else if} statement allows for more than two possible outcomes. You can add as many \colorbox{lightgray}{else if} statements as you would like, to make more complex conditionals! \\
+\newline
+The \colorbox{lightgray}{else if} statement always comes after the \colorbox{lightgray}{if} statement and before the \colorbox{lightgray}{else} statement. The \colorbox{lightgray}{else if} statement also takes a condition. Let us take a look at the syntax:
+\begin{lstlisting}
+let stopLight = "yellow";
+
+if (stopLight === "red") {
+  console.log("Stop!");
+} else if (stopLight === "yellow") {
+  console.log("Slow down.");
+} else if (stopLight === "green") {
+  console.log("Go!");
+} else {
+  console.log("Caution, unknown!");
+}
+\end{lstlisting}
+The \colorbox{lightgray}{else if} statements allow you to have multiple possible outcomes. \colorbox{lightgray}{if/else if/else} statements are read from top to bottom, so the first condition that evaluates to \colorbox{lightgray}{true} from the top to bottom is the block that gets executed. \\
+\newline
+In the example above, since \colorbox{lightgray}{stopLight $=$$=$$=$ `red'} evaluates to false and \colorbox{lightgray}{stopLight $=$$=$$=$ `yellow'} evaluates to \colorbox{lightgray}{true}, the code inside the first \colorbox{lightgray}{else if} statement is executed. The rest of the conditions are not evaluated. If none of the conditions evaluated to true, then the code in the \colorbox{lightgray}{else} statement would have executed.
+
+\subsection{The switch keyword}
+\colorbox{lightgray}{else if} statements are a great tool if we need to check multiple conditions. In programming, we often find ourselves needing to check multiple values and handling each of them differently. For example:
+\begin{lstlisting}
+let groceryItem = "papaya";
+
+if (groceryItem === "tomato") {
+  console.log("Tomatoes are $0.49");
+} else if (groceryItem === "papaya"){
+  console.log("Papayas are $1.29");
+} else {
+  console.log("Invalid item");
+}
+\end{lstlisting}
+In the code above, we have a series of conditions checking for a value that matches a \colorbox{lightgray}{groceryItem} variable. Our code works fine, but imagine if we needed to check 100 different values. Having to write that many \colorbox{lightgray}{else if} statements sounds like a pain. \\
+\newline
+A \colorbox{lightgray}{switch} statement provides an alternative syntax that is easier to read and write. A \colorbox{lightgray}{switch} statement looks like this:
+\begin{lstlisting}
+let groceryItem = "papaya";
+
+switch (groceryItem) {
+  case "tomato":
+    console.log("Tomatoes are $0.49");
+    break;
+  case "lime":
+    console.log("Limes are $1.49");
+    break;
+  case "papaya":
+    console.log("Papayas are $1.29");
+    break;
+  default:
+    console.log("Invalid item");
+    break;
+}
+// Prints "Papayas are $1.29"
+\end{lstlisting}
+\begin{itemize}[leftmargin = *]
+\item The \colorbox{lightgray}{switch} keyword initiates the statement and is followed by \colorbox{lightgray}{( ... )}, which contains the value that each \colorbox{lightgray}{case} will compare. In the example, the value or expression of the \colorbox{lightgray}{switch} statement is \colorbox{lightgray}{groceryItem}.
+\item Inside the block, \colorbox{lightgray}{\{ ... \}}, there are multiple \colorbox{lightgray}{case}s. The \colorbox{lightgray}{case} keyword checks if the expression matches the specified value that comes after it. The value following the first \colorbox{lightgray}{case} is \colorbox{lightgray}{`tomato'}. If the value of \colorbox{lightgray}{groceryItem} equalled \colorbox{lightgray}{`tomato'}, that \colorbox{lightgray}{case}'s \colorbox{lightgray}{console.log()} would run.
+\item The value of \colorbox{lightgray}{groceryItem} is \colorbox{lightgray}{`papaya'}, so the third \colorbox{lightgray}{case} runs— \colorbox{lightgray}{Papayas are \$1.29} is logged to the console.
+\item The \colorbox{lightgray}{break} keyword tells the computer to exit the block and not execute any more code or check any other cases inside the code block. Note: Without the \colorbox{lightgray}{break} keyword at the end of each case, the program would execute the code for all matching cases and the default code as well. This behavior is different from \colorbox{lightgray}{if}/\colorbox{lightgray}{else} conditional statements which execute only one block of code.
+\item At the end of each \colorbox{lightgray}{switch} statement, there is a \colorbox{lightgray}{default} statement. If none of the \colorbox{lightgray}{case}s are true, then the code in the \colorbox{lightgray}{default} statement will run.
+\end{itemize}
+
+\subsection{Review}
+Here are some of the major concepts for conditionals:
+\begin{itemize}[leftmargin = *]
+\item An \colorbox{lightgray}{if} statement checks a condition and will execute a task if that condition evaluates to \colorbox{lightgray}{true}.
+\item \colorbox{lightgray}{if...else} statements make binary decisions and execute different code blocks based on a provided condition.
+\item We can add more conditions using \colorbox{lightgray}{else if} statements.
+\item Comparison operators, including \colorbox{lightgray}{$<$}, \colorbox{lightgray}{$>$}, \colorbox{lightgray}{$<$$=$}, \colorbox{lightgray}{$>$$=$}, \colorbox{lightgray}{$=$$=$$=$}, and \colorbox{lightgray}{$!$$=$$=$} can compare two values.
+\item The logical and operator, \colorbox{lightgray}{\&\&}, or “and”, checks if both provided expressions are truthy.
+\item The logical operator \colorbox{lightgray}{||}, or “or”, checks if either provided expression is truthy.
+\item The bang operator, \colorbox{lightgray}{!}, switches the truthiness and falsiness of a value.
+\item The ternary operator is shorthand to simplify concise \colorbox{lightgray}{if...else} statements.
+\item A \colorbox{lightgray}{switch} statement can be used to simplify the process of writing multiple \colorbox{lightgray}{else if} statements. The \colorbox{lightgray}{break} keyword stops the remaining \colorbox{lightgray}{case}s from being checked and executed in a \colorbox{lightgray}{switch} statement.
+\end{itemize}
 
 
 
