--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -17,7 +17,7 @@
 \usepackage{xcolor}
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
-
+\usepackage{float}
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
 \definecolor{mauve}{rgb}{0.58,0,0.82}
@@ -49,7 +49,7 @@
    language=JavaScript,
    backgroundcolor=\color{backcolour},
    extendedchars=true,
-   basicstyle=\footnotesize\ttfamily,
+   basicstyle=\small\ttfamily,
    showstringspaces=false,
    showspaces=false,
    numberstyle=\tiny\color{codegray},
@@ -760,6 +760,76 @@ Here are some of the major concepts for conditionals:
 \item The ternary operator is shorthand to simplify concise \colorbox{lightgray}{if...else} statements.
 \item A \colorbox{lightgray}{switch} statement can be used to simplify the process of writing multiple \colorbox{lightgray}{else if} statements. The \colorbox{lightgray}{break} keyword stops the remaining \colorbox{lightgray}{case}s from being checked and executed in a \colorbox{lightgray}{switch} statement.
 \end{itemize}
+
+\newpage
+\section{Functions}
+\subsection{What are Functions?}
+When first learning how to calculate the area of a rectangle, there is a sequence of steps to calculate the correct answer:
+\begin{enumerate}[leftmargin = *]
+\item Measure the width of the rectangle.
+\item Measure the height of the rectangle.
+\item Multiply the width and height of the rectangle.
+\end{enumerate}
+With practice, you can calculate the area of the rectangle without being instructed with these three steps every time. We can calculate the area of one rectangle with the following code: 
+\begin{lstlisting}
+const width = 10;
+const height = 6;
+const area =  width * height;
+console.log(area); // Output: 60
+\end{lstlisting}
+Imagine being asked to calculate the area of three different rectangles: 
+\begin{lstlisting}
+// Area of the first rectangle
+const width1 = 10;
+const height1 = 6;
+const area1 =  width1 * height1;
+
+// Area of the second rectangle
+const width2 = 4;
+const height2 = 9;
+const area2 =  width2 * height2;
+
+// Area of the third rectangle
+const width3 = 10;
+const height3 = 10;
+const area3 =  width3 * height3;
+\end{lstlisting}
+In programming, we often use code to perform a specific task multiple times. Instead of rewriting the same code, we can group a block of code together and associate it with one task, then we can reuse that block of code whenever we need to perform the task again. We achieve this by creating a \textit{function}. A function is a reusable block of code that groups together a sequence of statements to perform a specific task. \\
+\newline
+Now, you will learn how to create and use functions, and how they can be used to create clearer and more concise code.
+
+\subsection{Function Declarations} 
+In JavaScript, there are many ways to create a function. One way to create a function is by using a \textit{function declaration}. Just like how a variable declaration binds a value to a variable name, a function declaration binds a function to a name, or an \textit{identifier}. Take a look at the anatomy of a function declaration below:
+\begin{figure}[H]
+\includegraphics[scale = 0.8]{4_1}
+\centering
+\end{figure}
+\noindent A function declaration consists of: 
+\begin{itemize}[leftmargin = *]
+\item The \colorbox{lightgray}{function} keyword.
+\item The name of the function, or its identifier, followed by parentheses.
+\item A function body, or the block of statements required to perform a specific task, enclosed in the function’s curly brackets, \colorbox{lightgray}{\{ \}}.
+\end{itemize}
+A function declaration is a function that is bound to an identifier, or name. In the next chapter, we will go over how to run the code inside the function body.
+We should also be aware of the \textit{hoisting} feature in JavaScript which allows access to function declarations before they’re defined. Take a look at example of hoisting:
+\begin{lstlisting}
+console.log(greetWorld()); // Output: Hello, World!
+
+function greetWorld() {
+  console.log("Hello, World!");
+}
+\end{lstlisting}
+Notice how hoisting allowed \colorbox{lightgray}{greetWorld()} to be called before the \colorbox{lightgray}{greetWorld()} function was defined! Since hoisting is not considered good practice, we simply want you to be aware of this feature.
+
+
+
+
+
+
+
+
+
+
 
 
 
