--- a/Javascript_Tutorial.tex
+++ b/Javascript_Tutorial.tex
@@ -891,14 +891,170 @@ function greeting (name = "stranger") {
 greeting("Nick") // Output: Hello, Nick!
 greeting() // Output: Hello, stranger!
 \end{lstlisting}
+\begin{itemize}[leftmargin = *]
+\item In the example above, we used the \colorbox{lightgray}{=} operator to assign the parameter \colorbox{lightgray}{name} a default value of \colorbox{lightgray}{`stranger'}. This is useful to have in case we ever want to include a non-personalized default greeting!
+\item When the code calls \colorbox{lightgray}{greeting(`Nick')} the value of the argument is passed in and, \colorbox{lightgray}{`Nick'}, will override the default parameter of \colorbox{lightgray}{`stranger'} to log \colorbox{lightgray}{`Hello, Nick!'} to the console.
+\item When there is not an argument passed into \colorbox{lightgray}{greeting()}, the default value of \colorbox{lightgray}{`stranger'} is used, and \colorbox{lightgray}{`Hello, stranger!'} is logged to the console.
+\end{itemize}
+By using a default parameter, we account for situations when an argument isn’t passed into a function that is expecting an argument.
 
+\subsection{Return}
+When a function is called, the computer will run through the function’s code and evaluate the result of calling the function. By default that resulting value is \colorbox{lightgray}{undefined}. 
+\begin{lstlisting}
+function rectangleArea(width, height) {
+  let area = width * height;
+}
+console.log(rectangleArea(5, 7)) // Prints undefined
+\end{lstlisting}
+In the code example, we defined our function to calculate the \colorbox{lightgray}{area} of a \colorbox{lightgray}{width} and \colorbox{lightgray}{height} parameter. Then \colorbox{lightgray}{rectangleArea()} is invoked with the arguments \colorbox{lightgray}{5} and \colorbox{lightgray}{7}. But when we went to print the results we got \colorbox{lightgray}{undefined}. The computer did calculate the area as \colorbox{lightgray}{35}, but we did not capture it. But we can capture with the keyword \colorbox{lightgray}{return}. 
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_7}
+\centering
+\end{figure}
+To pass back information from the function call, we use a return statement. To create a return statement, we use the \colorbox{lightgray}{return} keyword followed by the value that we wish to return. Like we saw above, if the value is omitted, \colorbox{lightgray}{undefined} is returned instead. \\
+\newline
+When a \colorbox{lightgray}{return} statement is used in a function body, the execution of the function is stopped and the code that follows it will not be executed. Look at the example below:
+\begin{lstlisting}
+function rectangleArea(width, height) {
+  if (width < 0 || height < 0) {
+    return "You need positive integers to calculate area!";
+  }
+  return width * height;
+}
+\end{lstlisting}
+If an argument for \colorbox{lightgray}{width} or \colorbox{lightgray}{height} is less than \colorbox{lightgray}{0}, then \colorbox{lightgray}{rectangleArea()} will return the string \\ 
+\colorbox{lightgray}{`You need positive integers to calculate area!'}. The second return statement \colorbox{lightgray}{width * height} will not run.
 
+The \colorbox{lightgray}{return} keyword is powerful because it allows functions to produce an output. We can then save the output to a variable for later use.
 
+\subsection{Helper Functions}
+We can also use the return value of a function inside another function. These functions being called within another function are often referred to as \textit{helper functions}. Since each function is carrying out a specific task, it makes our code easier to read and debug if necessary. \\
+\newline
+If we wanted to define a function that converts the temperature from Celsius to Fahrenheit, we could write two functions like:
+\begin{lstlisting}
+function multiplyByNineFifths(number) {
+  return number * (9/5);
+};
 
+function getFahrenheit(celsius) {
+  return multiplyByNineFifths(celsius) + 32;
+};
 
+getFahrenheit(15); // Returns 59
+\end{lstlisting}
 
+In the example above: 
+\begin{itemize}[leftmargin = *]
+\item \colorbox{lightgray}{getFahrenheit()} is called and \colorbox{lightgray}{15} is passed as an argument.
+\item The code block inside of \colorbox{lightgray}{getFahrenheit()} calls \colorbox{lightgray}{multiplyByNineFifths()} and passes \colorbox{lightgray}{15} as an argument.
+\item \colorbox{lightgray}{multiplyByNineFifths()} takes the argument of \colorbox{lightgray}{15} for the \colorbox{lightgray}{number} parameter.
+\item The code block inside of \colorbox{lightgray}{multiplyByNineFifths()} function multiplies \colorbox{lightgray}{15} by \colorbox{lightgray}{(9/5)}, which evaluates to \colorbox{lightgray}{27}.
+\item \colorbox{lightgray}{27} is returned back to the function call in \colorbox{lightgray}{getFahrenheit()}.
+\item \colorbox{lightgray}{getFahrenheit()} continues to execute. It adds \colorbox{lightgray}{32} to \colorbox{lightgray}{27}, which evaluates to \colorbox{lightgray}{59}.
+\item Finally, \colorbox{lightgray}{59} is returned back to the function call \colorbox{lightgray}{getFahrenheit(15)}.
+\end{itemize}
+We can use functions to section off small bits of logic or tasks, then use them when we need to. Writing helper functions can help take large and difficult tasks and break them into smaller and more manageable tasks.
+\newpage
+\subsection{Function Expressions}
+Another way to define a function is to use a \textit{function expression}. To define a function inside an expression, we can use the \colorbox{lightgray}{function} keyword. In a function expression, the function name is usually omitted. A function with no name is called an \textit{anonymous function}. A function expression is often stored in a variable in order to refer to it. Consider the following function expression:
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_8}
+\centering
+\end{figure}
+To declare a function expression:
+\begin{enumerate}[leftmargin = *]
+\item Declare a variable to make the variable’s name be the name, or identifier, of your function. Since the release of ES6, it is common practice to use \colorbox{lightgray}{const} as the keyword to declare the variable.
+\item Assign as that variable’s value an anonymous function created by using the \colorbox{lightgray}{function} keyword followed by a set of parentheses with possible parameters. Then a set of curly braces that contain the function body.
+\end{enumerate}
+To invoke a function expression, write the name of the variable in which the function is stored followed by parentheses enclosing any arguments being passed into the function.
+\begin{lstlisting}
+variableName(argument1, argument2)
+\end{lstlisting}
+Unlike function declarations, function expressions are not hoisted so they cannot be called before they are defined.
 
+\subsection{Arrow Functions}
+ES6 introduced \textit{arrow function syntax}, a shorter way to write functions by using the special “fat arrow” \colorbox{lightgray}{$($$)$ $=$$>$} notation. \\
+\newline
+Arrow functions remove the need to type out the keyword \colorbox{lightgray}{function} every time you need to create a function. Instead, you first include the parameters inside the \colorbox{lightgray}{( )} and then add an arrow \colorbox{lightgray}{$=$$>$} that points to the function body surrounded in \colorbox{lightgray}{\{ \}} like this:
+\begin{lstlisting}
+const rectangleArea = (width, height) => {
+  let area = width * height;
+  return area;
+};
+\end{lstlisting}
+It is important to be familiar with the multiple ways of writing functions because you will come across each of these when reading other JavaScript code.
 
+\subsection{Concise Body Arrow Functions}
+JavaScript also provides several ways to refactor arrow function syntax. The most condensed form of the function is known as \textit{concise body}. We will explore a few of these techniques below:
+\begin{enumerate}[leftmargin = *]
+\item Functions that take only a single parameter do not need that parameter to be enclosed in parentheses. However, if a function takes zero or multiple parameters, parentheses are required.
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_9}
+\centering
+\end{figure}
+\item A function body composed of a single-line block does not need curly braces. Without the curly braces, whatever that line evaluates will be automatically returned. The contents of the block should immediately follow the arrow \colorbox{lightgray}{$=$$>$} and the \colorbox{lightgray}{return} keyword can be removed. This is referred to as \textit{implicit return}.
+\end{enumerate}
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_10}
+\centering
+\end{figure}
+So if we have a function: 
+\begin{lstlisting}
+const squareNum = (num) => {
+  return num * num;
+};
+\end{lstlisting}
+We can refactor the function to:
+\begin{lstlisting}
+const squareNum = num => num * num;
+\end{lstlisting}
+Notice the following changes:
+\begin{itemize}[leftmargin = *]
+\item The parentheses around \colorbox{lightgray}{num} have been removed, since it has a single parameter.
+\item The curly braces \colorbox{lightgray}{\{ \}} have been removed since the function consists of a single-line block.
+\item The \colorbox{lightgray}{return} keyword has been removed since the function consists of a single-line block.
+\end{itemize}
+
+\subsection{Review Functions}
+In this we covered some important concepts about functions:
+\begin{itemize}[leftmargin = *]
+\item A \textit{function} is a reusable block of code that groups together a sequence of statements to perform a specific task.
+\item A \textit{function declaration}:
+\vspace{-4mm}
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_1}
+\centering
+\end{figure}
+\item A parameter is a named variable inside a function’s block which will be assigned the value of the argument passed in when the function is invoked: 
+\begin{figure}[H]
+\includegraphics[scale = 0.75]{4_4}
+\centering
+\end{figure}
+\item To \textit{call} a function in your code:
+\vspace{-2mm}
+\begin{figure}[H]
+\includegraphics[scale = 0.65]{4_2}
+\centering
+\end{figure}
+\item ES6 introduces new ways of handling arbitrary parameters through \textit{default parameters} which allow us to assign a default value to a parameter in case no argument is passed into the function.
+\item To return a value from a function, we use a \textit{return statement}.
+\item To define a function using \textit{function} expressions:
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_8}
+\centering
+\end{figure}
+\item To define a function using \textit{arrow function notation}:
+\begin{figure}[H]
+\includegraphics[scale = 0.8]{4_11}
+\centering
+\end{figure}
+\item Function definition can be made concise using concise arrow notation:
+\begin{figure}[H]
+\includegraphics[scale = 0.73]{4_10}
+\centering
+\end{figure}
+\end{itemize}
+It is good to be aware of the differences between function expressions, arrow functions, and function declarations. As you program more in JavaScript, you will see a wide variety of how these function types are used. 
 
 
 
